external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_constant_fold_negative.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:12:17
   │
12 │         let _x: i8 = -16i8 >> 2u8; // -16 >> 2 = -4 (arithmetic shift)
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:12:22
   │
12 │         let _x: i8 = -16i8 >> 2u8; // -16 >> 2 = -4 (arithmetic shift)
   │                      ^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:16:17
   │
16 │         let _x: i64 = -1024i64 >> 3u8; // -1024 >> 3 = -128
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:16:23
   │
16 │         let _x: i64 = -1024i64 >> 3u8; // -1024 >> 3 = -128
   │                       ^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:20:17
   │
20 │         let _x: i8 = -1i8 >> 1u8; // -1 >> 1 = -1 (all bits set stays all bits set)
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:20:22
   │
20 │         let _x: i8 = -1i8 >> 1u8; // -1 >> 1 = -1 (all bits set stays all bits set)
   │                      ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:25:17
   │
25 │         let _x: i16 = (-1i8 as i16); // -1i8 should become -1i16, not 255i16
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:25:24
   │
25 │         let _x: i16 = (-1i8 as i16); // -1i8 should become -1i16, not 255i16
   │                        ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:29:17
   │
29 │         let _x: i64 = (-1i8 as i64); // -1i8 should become -1i64
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:29:24
   │
29 │         let _x: i64 = (-1i8 as i64); // -1i8 should become -1i64
   │                        ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:33:17
   │
33 │         let _x: i32 = (-100i16 as i32); // -100i16 should become -100i32
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:33:24
   │
33 │         let _x: i32 = (-100i16 as i32); // -100i16 should become -100i32
   │                        ^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:37:17
   │
37 │         let _x: i128 = (-1i32 as i128);
   │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:37:25
   │
37 │         let _x: i128 = (-1i32 as i128);
   │                         ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:42:17
   │
42 │         let _x: i8 = (42i64 as i8); // 42 fits in i8
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:42:23
   │
42 │         let _x: i8 = (42i64 as i8); // 42 fits in i8
   │                       ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:46:17
   │
46 │         let _x: i8 = (-42i64 as i8); // -42 fits in i8
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:46:23
   │
46 │         let _x: i8 = (-42i64 as i8); // -42 fits in i8
   │                       ^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:50:17
   │
50 │         let _x: i8 = (-100i16 as i8); // -100 fits in i8
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:50:23
   │
50 │         let _x: i8 = (-100i16 as i8); // -100 fits in i8
   │                       ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:55:17
   │
55 │         let _x: i64 = 5i64 - 10i64; // = -5
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:55:23
   │
55 │         let _x: i64 = 5i64 - 10i64; // = -5
   │                       ^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:59:17
   │
59 │         let _x: i32 = 7i32 * -3i32; // = -21
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold_negative.move:59:23
   │
59 │         let _x: i32 = 7i32 * -3i32; // = -21
   │                       ^^^^^^^^^^^^ Signed integer types are under development
